mentors django-app created + included to settins.installed_apps

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,7 @@ services:
       - POSTGRES_PASSWORD=postgres
 
   django-dev:
+    restart: always
     build:
       context: .
       target: development
