--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,7 +1,12 @@
 asgiref==3.5.0
 certifi==2021.10.8
 Django==4.0.1
+django-seed==0.3.1
 djangorestframework==3.13.1
-pytz==2021.3
-sqlparse==0.4.2
+Faker==12.1.0
 psycopg2-binary==2.9.3
+python-dateutil==2.8.2
+pytz==2021.3
+six==1.16.0
+sqlparse==0.4.2
+toposort==1.7
