new docker setup

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,6 @@
 version: '3.6'
 
 services:
-
   # This service will launch a postgress DB. The serive name <db> is expected by django default db name.
   db:
     image: postgres
@@ -19,27 +18,15 @@ services:
       retries: 5
 
 
-# This service will launch a Django DB migration
-  db-migrations:
-    build: .
-    command: >
-      bash -c "venv/bin/python manage.py makemigrations
-      && venv/bin/python manage.py migrate"
+  setup:
+    restart: always
+    build:
+      context: .
+      target: setup
     depends_on:
       db:
         condition: service_healthy
-    environment:
-      # DB credentials to create the db
-      POSTGRES_NAME: ${POSTGRES_NAME}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-
-
-  #========================================================================================#
-  # This service will create a Django superuser with the credentials set on .env
-  create-superuser:
-    build: .
-    command: venv/bin/python manage.py createsuperuser --noinput
+    
     environment:
       # DB credentials needed to create the superuser
       POSTGRES_NAME: ${POSTGRES_NAME}
@@ -51,50 +38,13 @@ services:
       DJANGO_SUPERUSER_EMAIL: ${DJANGO_SUPERUSER_EMAIL}
       DJANGO_SUPERUSER_PASSWORD: ${DJANGO_SUPERUSER_PASSWORD}
 
-    depends_on:
-      db:
-        condition: service_healthy
-  #========================================================================================#
+      DJANGO_APP: ${DJANGO_APP}
+      SEED_SIZE: ${SEED_SIZE}
 
-
-  #========================================================================================#
-  # This service provides the project with a db-seed option
-  db-seed:
-    build: .
-    command: venv/bin/python manage.py seed ${DJANGO_APP} --number=${SEED_SIZE}
-
-    environment:
-      # DB credentials to create the db
-      POSTGRES_NAME: ${POSTGRES_NAME}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-    depends_on:
-      db:
-        condition: service_healthy
-  #========================================================================================#
-
-
-
-  #========================================================================================#
-  # This is the main service Django rest API
-  django-dev:
-    restart: always
-    build:
-      context: .
-      target: development
     ports:
       - "8000:8000"
       # debugging port:
       - "3000:3000"
-    environment:
-      # DB credentials needed to connect to the db
-      POSTGRES_NAME: ${POSTGRES_NAME}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      DEBUG:
-    depends_on:
-      db:
-        condition: service_healthy
 
-    command: venv/bin/python3 manage.py runserver 0.0.0.0:8000
-  #========================================================================================#
+
+
