env-template updated

--- a/.env-template
+++ b/.env-template
@@ -5,3 +5,11 @@ POSTGRES_PASSWORD=
 DJANGO_SUPERUSER_USERNAME=
 DJANGO_SUPERUSER_EMAIL=
 DJANGO_SUPERUSER_PASSWORD=
+
+DJANGO_SECRET_KEY=
+
+DEBUG=
+
+DJANGO_APP=
+
+SEED_SIZE=
