--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -3,7 +3,7 @@ certifi==2021.10.8
 Django==4.0.1
 django-seed==0.3.1
 djangorestframework==3.13.1
-django-rest-swagger==2.2.0
+drf-yasg==1.20.0
 Faker==12.1.0
 psycopg2-binary==2.9.3
 python-dateutil==2.8.2
